<resources>
    <!--App name-->
    <string name="app_name">冻博汇</string>

    <!--首页 分类-->
    <string name="home_classify_dh">去赚粮票</string>
    <string name="home_classify_cg">常用采购</string>
    <string name="home_classify_jf">我的粮票</string>
    <string name="home_classify_dd">我的订单</string>
    <!--首页 底部导航页-->
    <string name="nav_home">首页</string>
    <string name="nav_classify">类别</string>
    <string name="nav_cart">购物车</string>
    <string name="nav_mine">我</string>
    <!--RefreshLayout-->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="more">更多</string>
    <string name="loading">正在加载...</string>

    <string name="my_msg">我的消息</string>
    <string name="my_addresses">收货地址</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_orders">我的订单</string>
    <string name="my_nor_buy">常用采购</string>
    <string name="my_shop_manager">我的店铺</string>
    <string name="my_after_sale">售后规则</string>
    <string name="my_server_phone">客服电话</string>
    <string name="my_about_us">关于我们</string>
    <string name="address_add">添加新地址</string>

    <string name="tabs_jy">鸡鸭类</string>
    <string name="tabs_zr">猪肉类</string>
    <string name="tabs_ny">牛羊类</string>
    <string name="tabs_wz">丸子类</string>
    <string name="tabs_sc">水产类</string>
    <string name="tabs_ss">素食类</string>
    <string name="tabs_xc">小吃类</string>
    <string name="tabs_qt">其他类</string>
    <!--购物车-->
    <string name="cart_title">购物车</string>
    <string name="cart_edit">编辑</string>
    <string name="cart_finish">完成</string>
    <string name="cart_all">全选</string>
    <string name="cart_total">合计:</string>
    <string name="cart_order">去结算</string>
    <string name="cart_carr">(不含运费)</string>
    <string name="cart_del">删除</string>

    <string name="toast_exit">再按一次退出冻博汇</string>
    <string name="add_shop_info">该地址即为收货地址,不能修改,请仔细填写。分店申请需要时间审核,请耐心等待。</string>
    <string name="edit_shop_info">只能修改店长和手机号哦,其他的暂不能修改，请见谅。</string>
    <string name="edit_idea_hint">如果您对我们有什么建议、想法和期望，请告诉我们~</string>

    <string name="test_string">商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情</string>
    <string name="normal_buyall">一键采购</string>

    <string name="ptr_pull_refresh">下拉刷新</string>
    <string name="ptr_pull_refreshing">正在刷新...</string>
    <string name="ptr_pull_enable">释放立即刷新</string>
    <string name="ptr_pull_disable">下拉刷新</string>
    <string name="ptr_push_refresh">上拉加载更多...</string>
    <string name="ptr_push_refreshing">正在加载...</string>
    <string name="ptr_push_enable">释放立即加载</string>
    <string name="ptr_push_disable">上拉加载</string>

</resources>
