<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/titleBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.HomeActivity">

    <com.common.widget.MyViewPager
        android:id="@+id/vp_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/mybg">
    </com.common.widget.MyViewPager>
    <View style="@style/HorizontalDividerLine"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingTop="4dp"
        android:layout_height="54dp">
        <RadioGroup
            android:id="@+id/rg_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_home"
                style="@style/RadioButtonHomeTheme"
                android:drawableTop="@drawable/sl_home_rb"
                android:checked="true"
                android:text="@string/nav_home"/>
            <RadioButton
                android:id="@+id/rb_classify"
                style="@style/RadioButtonHomeTheme"
                android:drawableTop="@drawable/sl_classify_rb"
                android:text="@string/nav_classify"/>
            <RadioButton
                android:id="@+id/rb_cart"
                style="@style/RadioButtonHomeTheme"
                android:drawableTop="@drawable/sl_cart_rb"
                android:text="@string/nav_cart"/>
            <RadioButton
                android:id="@+id/rb_mine"
                style="@style/RadioButtonHomeTheme"
                android:drawableTop="@drawable/sl_mine_rb"
                android:text="@string/nav_mine"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <LinearLayout
                android:id="@+id/ll_cart_bv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_cart_bv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>