<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main"
                android:clipToPadding="true"
                android:fitsSystemWindows="true"
                tools:context=".cart.CartActivity">

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/main">
                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/toleft_white"/>
                <TextView
                    style="@style/text_14sp_white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/cart_title"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/iv_shotcut"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/icon_shortcut"/>
                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/iv_shotcut"
                    android:gravity="center"
                    android:background="@null"
                    android:textColor="@color/white"
                    android:text="@string/cart_edit"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/rl_title"
            android:background="@color/mybg"
            android:padding="6dp">

                <TextView
                    android:id="@+id/tv_notify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"/>
        </LinearLayout>
        <com.common.refresh.RefreshLayout
            android:id="@+id/refresh_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ll_notify"
            android:orientation="vertical">
                <include layout="@layout/include_cart_nodata"/>
                <include layout="@layout/include_httpresult"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_cart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/mybg"
                    android:paddingBottom="54dp"
                    android:scrollbars="none">
                </android.support.v7.widget.RecyclerView>
                <View style="@style/HorizontalDividerLine"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/mybg"/>
        </com.common.refresh.RefreshLayout>
        <View style="@style/HorizontalDividerLine"
              android:layout_alignParentBottom="true"
              android:layout_marginBottom="54dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:paddingLeft="5dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/cb_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:checked="true"
                    android:paddingLeft="8dp"
                    android:text="@string/cart_all"
                    style="@style/customCheckbox"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="end">
                        <TextView
                            android:id="@+id/tv_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/cb_all"
                            android:layout_marginLeft="10dp"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="8dp"
                            android:layout_marginTop="4dp"
                            android:textSize="18sp"
                            android:text="@string/cart_total"/>
                        <TextView
                            android:id="@+id/tv_carr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/cb_all"
                            android:layout_marginLeft="10dp"
                            android:layout_centerVertical="true"
                            android:textColor="@color/myblack"
                            android:textSize="14sp"
                            android:text="@string/cart_carr"
                            android:layout_marginRight="8dp"/>
                </LinearLayout>
                <Button
                    android:id="@+id/btn_order"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/cart_order"
                    style="@style/bigRedButton"/>
                <Button
                    android:id="@+id/btn_del"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:text="@string/cart_del"
                    style="@style/bigRedButton"/>
        </LinearLayout>
</RelativeLayout>